--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "scripts": {
     "build": "tsc",
     "lint": "eslint \"src/**/*.ts\" \"tests/**/*.ts\"",
-    "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\" prisma/**/*.prisma"
+    "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\" prisma/**/*.prisma",
+    "db:migrate:dev": "prisma migrate dev",
+    "db:generate": "prisma generate",
+    "db:studio": "prisma studio",
+    "db:seed": "ts-node prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
