--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node dist/main.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/main.js\"",
     "dev:ts-node": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/main.ts",
+    "dev:ts-node-docker": "npx ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/main.ts",
     "dev:ts-node-old": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/main.ts",
     "lint": "eslint \"src/**/*.ts\" \"tests/**/*.ts\"",
     "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\" prisma/**/*.prisma",
@@ -16,7 +17,9 @@
     "db:seed": "prisma db seed",
     "test": "jest --runInBand",
     "test:watch": "jest --watch --runInBand",
-    "test:cov": "jest --coverage --runInBand"
+    "test:cov": "jest --coverage --runInBand",
+    "test:prepare": "cross-env NODE_ENV=test npx prisma migrate reset --force",
+    "test-docker": "npm run test:prepare && jest --runInBand --verbose"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
@@ -34,6 +37,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.14.0",
