chore(PEOMAN-14): add update to read the port for dev when creating containers

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - ./jest.config.ts:/usr/src/app/jest.config.ts
       - /usr/src/app/node_modules
     ports:
-      - "3000:3000"
+      - ${PORT:-3000}:3000
     env_file:
       - .env.development
     depends_on:
